--- a/project980404/sass/index.scss
+++ b/project980404/sass/index.scss
@@ -22,7 +22,21 @@ div.footerDoc{
     background-color: #F7F7F7;
 }
 
-button.btn,
+button.btnShow,
+button.btnEdit{
+    font-size: 1em;
+}
+
+button.btnShow{
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+}
+
+button.btnEdit{
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+
 p.cellFooter{
     font-size: 0.8em;
 }
